# wiki_compile

./: .env.example  .gitignore  PRD_qmd.md  README.md  config.yaml.example  pyproject.toml
kb_compiler/: config.py  main.py  qmd_cli.py
kb_compiler/core/: llm.py  local_llm.py  metadata.py  obsidian.py
kb_compiler/phases/: compile.py  ingest.py  maintenance.py  query.py
kb_compiler/qmd/: __init__.py  chunker.py  embeddings.py  qmd_search.py  qmd_store.py  reranker.py
scripts/: evaluate_llm.py  setup.sh
tests/: test_chunker.py  test_embeddings.py  test_qmd_search.py  test_qmd_store.py  test_reranker.py
